--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <title>CasparCG Time-Display</title>
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <h1>Hello World Release v1.0.2!</h1>
