--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <title>CasparCG Time-Display</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/fontawesome/css/all.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/img/icon.ico">
 </head>
 
 <body>
     <i class="settings fas fa-cog"></i>
+    <div id="message-display"></div>
     <div class="container">
         <div class="time time-now">00:00:00</div>
         <div class="time">
